[project]
name = "latency_flow_analyser"
version = "1.0.1"
description = "Get latency plots from GEA output."
authors = [
    {name="Jorge Hernandez Olcina", email="jorgeho1995@gmail.com"}
    ]
maintainers = [
    {name="Jorge Hernandez Olcina", email="jorgeho1995@gmail.com"},
]
requires-python = ">=3.6"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
latency_flow_analyser = "latency_flow_analyser:main"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

ignore_missing_imports = true